compiler/tests/en/errors/reserved_name.salam
// EXPECT: reserved
func while():
    ret 0
end
